--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.bootique.parent</groupId>
         <artifactId>bootique-parent</artifactId>
-        <version>0.13</version>
+        <version>0.14</version>
     </parent>
 
     <groupId>com.objectstyle.utils</groupId>
@@ -15,7 +15,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <cayenne.version>4.2.M1-SNAPSHOT</cayenne.version>
+        <cayenne.version>4.3.M1-SNAPSHOT</cayenne.version>
+        <bootique.version>2.0.1</bootique.version>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
     </properties>
 
     <build>
@@ -23,15 +26,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
+                <version>3.10.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>3.3.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.cayenne.plugins</groupId>
@@ -49,7 +49,7 @@
             <dependency>
                 <groupId>io.bootique.bom</groupId>
                 <artifactId>bootique-bom</artifactId>
-                <version>1.0.RC1</version>
+                <version>${bootique.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
